fixing text to match code

--- a/site/docs/tbdex/wallet/place-order.mdx
+++ b/site/docs/tbdex/wallet/place-order.mdx
@@ -35,8 +35,7 @@ Then sign the Order with the customer's [Portable DID](/docs/web5/build/decentra
 />
 
 ## Send Order
-After creating and signing the Order, it needs to be sent to the PFI. 
-This is done using the `TbdexHttpClient.sendMessage` method:
+After creating and signing the Order, it needs to be sent to the PFI via the following:
 
 <Shnip
   snippets={[
