--- a/site/docs/tbdex/wallet/get-offerings.mdx
+++ b/site/docs/tbdex/wallet/get-offerings.mdx
@@ -4,7 +4,7 @@ hide_title: true
 sidebar_position: 5
 ---
 
-<LanguageSwitcher languages="JavaScript, Kotlin" />
+<LanguageSwitcher languages="JavaScript, Kotlin, Swift" />
 
 # Get Offerings
 
@@ -20,6 +20,7 @@ In other words, an Offering is a way of describing a financial product that a PF
   snippets={[
     { snippetName: 'walletGetOfferingsJS', language: 'JavaScript' },
     { snippetName: 'walletGetOfferingsKt', language: 'Kotlin' },
+    { snippetName: 'walletGetOfferingsSwift', language: 'Swift' }
   ]}
 />
 
