adding kotlin snippets & test & new folder

--- a/site/docs/tbdex/issuer/Known Customer Credential/kcc-issuer.mdx
+++ b/site/docs/tbdex/issuer/Known Customer Credential/kcc-issuer.mdx
@@ -50,9 +50,9 @@ This approach is used when the goal is solely to authenticate the user without r
       title: 'Issuer api.js for id_token only ',
     },
     {
-      snippetName: '',
+      snippetName: 'siopv2InitiateId_tokenEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt for id_token only',
     },
   ]}
 />
@@ -73,9 +73,9 @@ This approach is used when you need to authenticate the user and also want to re
       title: 'Issuer api.js for id_token and vp_token',
     },
     {
-      snippetName: '',
+      snippetName: 'siopv2InitiateId_tokenAndVp_tokenEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt for id_token and vp_token',
     },
   ]}
 />
@@ -101,9 +101,9 @@ The SIOPv2 Authorization request contains information about you, the Issuer, alo
       title: 'Issuer api.js',
     },
     {
-      snippetName: '',
+      snippetName: 'encodeSiopv2AuthRequestIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
@@ -180,9 +180,9 @@ When decoded, here is the JSON of `id_token` and `vp_token`:
       title: 'Issuer api.js',
     },
     {
-      snippetName: '',
+      snippetName: 'siopv2ResponseEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
@@ -215,9 +215,9 @@ Wallets use the `credential_issuer` from the Credential Offer to dynamically con
       title: 'Issuer api.js',
     },
     {
-      snippetName: '',
+      snippetName: 'wellKnownIssuerMetadataEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
@@ -236,9 +236,9 @@ Wallets use the `credential_issuer` from the Credential Offer to dynamically con
       title: 'Issuer api.js',
     },
     {
-      snippetName: '',
+      snippetName: 'wellKnownAuthorizationServerEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
@@ -256,9 +256,9 @@ Wallets use the `credential_issuer` from the Credential Offer to dynamically con
       title: 'Issuer api.js',
     },
     {
-      snippetName: '',
+      snippetName: 'accessTokenEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
@@ -277,9 +277,9 @@ When creating a Verifiable Credential, you can design a model class to represent
       title: 'Issuer kccCredential.js',
     },
     {
-      snippetName: '',
+      snippetName: 'KnownCustomerCredentialsClassKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
@@ -333,9 +333,9 @@ Before issuing a Known Customer Credential, it's important to complete all neces
       title: 'Issuer api.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialEndpointIssuerKT',
       language: 'Kotlin',
-      title: 'Application.kt',
+      title: 'Issuer Application.kt',
     },
   ]}
 />
