--- a/site/docs/tbdex/issuer/vc-issuance.mdx
+++ b/site/docs/tbdex/issuer/vc-issuance.mdx
@@ -1,4 +1,5 @@
 ---
+sidebar_position: 2
 title: Credential Issuance
 hide_title: true
 ---
@@ -23,14 +24,19 @@ If you need to create a Credential Issuance app from scratch, continue on with t
 
 <LanguageSwitchBlock>
   <div language="Kotlin">
-    * Create a web server using <a href="https://www.jetbrains.com/help/idea/ktor.html#run_ktor_app">Ktor</a> that will serve as an API endpoint.
+    * Create a web server using{' '}
+    <a href="https://www.jetbrains.com/help/idea/ktor.html#run_ktor_app">
+      Ktor
+    </a>{' '}
+    that will serve as an API endpoint.
   </div>
   <div language="JavaScript">
-    * Create a web server using <a href="https://expressjs.com/">Express</a> that will serve as an API endpoint.
+    * Create a web server using <a href="https://expressjs.com/">Express</a>{' '}
+    that will serve as an API endpoint.
   </div>
 </LanguageSwitchBlock>
-* Design the credential you'd like to offer. 
-* Implement an issuance path where you'll accept a request for issuance, perform any necessary checks, and issue the credential.
+* Design the credential you'd like to offer. * Implement an issuance path where you'll
+accept a request for issuance, perform any necessary checks, and issue the credential.
 * Return the credential to the requester.
 
 ## Environment Setup
