Added Deep Dive button to Web5 docs

--- a/site/docs/web5/index.mdx
+++ b/site/docs/web5/index.mdx
@@ -32,6 +32,15 @@ The Web5 SDK helps you create a decentralized app in minutes.
     {
       type: 'button',
       data: {
+        label: 'Deep Dive',
+        url: '/blog/what-is-web5/',
+        isExternalLink: false,
+        imageURL: '/img/external-link-blue-icon.svg',
+      },
+    },
+    {
+      type: 'button',
+      data: {
         label: 'Quickstart',
         url: 'quickstart',
         isExternalLink: false,
