--- a/site/docs/tbdex/issuer/kcc/kcc-issuer.mdx
+++ b/site/docs/tbdex/issuer/kcc/kcc-issuer.mdx
@@ -20,7 +20,7 @@ In this guide, we'll cover:
 
 - Performing Identity Verification (IDV) as a necessary step **before** issuing a Known Customer Credential (KCC), by implementing an API conformant with [Self Issued OpenID Provider V2 (SIOPv2)](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html) and [OpenID for Verifiable Presentation's (OID4VP)](https://openid.net/specs/openid-4-verifiable-presentations-1_0.html).
 - Designing a KCC, detailing the required properties.
-- Issuing a KCC, following successful IDV.
+- Issuing a KCC, conformant with [OID4VCI](https://openid.net/specs/openid-4-verifiable-credential-issuance-1_0.html), following successful IDV.
 
 :::info
 For a detailed guide on managing Known Customer Credentials as a Wallet application, please refer to the [Known Customer Credential Guide for Wallet Apps](/)
