--- a/site/docs/tbdex/issuer/vc-serverSetup.mdx
+++ b/site/docs/tbdex/issuer/vc-serverSetup.mdx
@@ -165,4 +165,4 @@ Now that you have your server environment set up, depending on your use case, yo
 
 - [Credential Issuance Guide](/docs/tbdex/issuer/vc-issuance)
 
-- [Known Customer Credential Guide](/)
+- [Known Customer Credential Guide](/docs/tbdex/issuer/kcc/kcc-issuer/)
