adding links early

--- a/site/docs/tbdex/issuer/vc-issuance.mdx
+++ b/site/docs/tbdex/issuer/vc-issuance.mdx
@@ -21,7 +21,7 @@ If you already have an Issuance app up and running, check out the guide on [how 
 
 ## Environment Setup
 
-If you need to create a Credential Issuance app from scratch, check out the [Credential Issuance Server Setup Guide](/) for detailed instructions on the dependencies and packages needed to set up your server.
+If you need to create a Credential Issuance app from scratch, check out the [Credential Issuance Server Setup Guide](/docs/tbdex/issuer/vc-serverSetup) for detailed instructions on the dependencies and packages needed to set up your server.
 
 :::note
 If you'd like to view a full, runnable project, see our [VC Issuer Example](https://github.com/TBD54566975/super-simple-sanctions).
