get all offerings..bug

--- a/site/docs/tbdex/wallet/get-offerings.mdx
+++ b/site/docs/tbdex/wallet/get-offerings.mdx
@@ -39,6 +39,7 @@ Given you have a list of PFIs on your network, you can check their Offerings for
   snippets={[
     { snippetName: 'walletFindMatchingOfferingsJS', language: 'JavaScript' },
     { snippetName: 'walletFindMatchingOfferingsKt', language: 'Kotlin' },
+    { snippetName: 'walletFindMatchingOfferingsSwift', language: 'Swift' },
   ]}
 />
 
