first draft managing credentials test

--- a/site/docs/tbdex/wallet/managing-credentials.mdx
+++ b/site/docs/tbdex/wallet/managing-credentials.mdx
@@ -4,7 +4,7 @@ hide_title: true
 sidebar_position: 6
 ---
 
-<LanguageSwitcher languages="JavaScript, Kotlin" />
+<LanguageSwitcher languages="JavaScript, Kotlin, Swift" />
 
 # Managing Credentials
 
@@ -37,6 +37,10 @@ You can obtain the `requiredClaims` from an Offering via:
     {
       snippetName: 'retrievePresentationDefinitionFromOfferingsRequiredClaimsJS',
       language: 'JavaScript',
+    },
+    {
+      snippetName: 'retrievePresentationDefinitionFromOfferingsRequiredClaimsSwift',
+      language: 'Swift',
     },
   ]}
 />
@@ -83,6 +87,10 @@ You can narrow these options down even further by filtering for the ones where t
       snippetName: 'findMatchingOfferingsWithCredentialValidationJS',
       language: 'JavaScript',
     },
+    {
+      snippetName: 'findMatchingOfferingsWithCredentialValidationSwift',
+      language: 'Swift',
+    },
   ]}
 />
 
@@ -109,6 +117,10 @@ To do so, pass the customer's credentials and the `requiredClaims` section of th
     {
       snippetName: 'getSelectedCredentialsJS',
       language: 'JavaScript',
+    },
+    {
+      snippetName: 'getSelectedCredentialsSwift',
+      language: 'Swift',
     },
   ]}
 />
