--- a/site/docs/tbdex/issuer/kcc/kcc-issuer.mdx
+++ b/site/docs/tbdex/issuer/kcc/kcc-issuer.mdx
@@ -19,20 +19,20 @@ This guide is intended for educational purposes only and does not constitute leg
 In this guide, we'll cover:
 
 - Performing Identity Verification (IDV) as a necessary step **before** issuing a Known Customer Credential (KCC), by implementing an HTTP API conformant with [Self Issued OpenID Provider V2 (SIOPv2)](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html) and [OpenID for Verifiable Presentation's (OID4VP)](https://openid.net/specs/openid-4-verifiable-presentations-1_0.html).
-- Designing a KCC, detailing the required properties.
-- Issuing a KCC, conformant with [OpenID for Verifiable Credential Issuance (OID4VCI)](https://openid.net/specs/openid-4-verifiable-credential-issuance-1_0.html), following successful IDV.
+- Designing and detailing the required properties of a KCC.
+- Issuing a KCC conformant with [OpenID for Verifiable Credential Issuance (OID4VCI)](https://openid.net/specs/openid-4-verifiable-credential-issuance-1_0.html) following successful IDV.
 
 :::info
-For a detailed guide on managing Known Customer Credentials as a Wallet application, please refer to the [Known Customer Credential Guide for Wallet Apps](/)
+For a detailed guide on managing Known Customer Credentials as a Wallet application, please refer to the [Known Customer Credential Guide for Wallet Apps](/docs/tbdex/issuer/kcc/kcc-wallet)
 :::
 
 ## Environment Setup
 
-If you haven't already, please follow the [Credential Issuance Server Setup Guide](/) for detailed instructions on the dependencies and packages needed to set up your server.
+If you haven't already, please follow the [Credential Issuance Server Setup Guide](/docs/tbdex/issuer/vc-serverSetup) for detailed instructions on the dependencies and packages needed to set up your server.
 
 ## IDV Process
 
-Identity Verification (IDV) is a critical component of typical Know Your Customer (KYC) requirements, where certain types of Personally Identifying Information (PII) are collected and verified from an individual. IDV is a crucial step before a Known Customer Credential (KCC) can be issued.
+IDV is a critical component of typical KYC requirements, where certain types of Personally Identifying Information (PII) are collected and verified from an individual. IDV is a crucial step before a KCC can be issued.
 
 ```mermaid
 %%{
@@ -226,7 +226,7 @@ The decoded [JWT Claims](https://datatracker.ietf.org/doc/html/rfc7519#section-4
 The IDV Request Form points to a webpage for the customer to input their Personal Identifiable Information (PII) (e.g.; name, identification number, date of birth, etc).  
 :::
 
-#### Credential Offer Details:
+#### [Credential Offer Details:](https://openid.github.io/OpenID4VCI/openid-4-verifiable-credential-issuance-wg-draft.html#section-4.1)
 
 - **`credential_issuer`**: The base URL address of the Issuer's service. It is used by the Wallet to retrieve the Issuer's metadata and the Issuer's Authorization Server Metadata.
 - **`credential_configuration_ids`**: Unique strings that identify the credential you are offering. The Wallet can use these to request metadata.
@@ -240,7 +240,7 @@ The IDV Request Form points to a webpage for the customer to input their Persona
 Wallets use the `credential_issuer` from the Credential Offer to dynamically construct URLs for fetching Issuer and Authorization Server Metadata. These URLs, formed by appending `/.well-known/openid-credential-issuer` and `/.well-known/oauth-authorization-server` to the `credential_issuer`, allow wallets to access up-to-date information on issuer capabilities and OAuth 2.0 endpoints. The next steps will cover how to properly configure these endpoints.
 :::
 
-5. Configure the `/.well-known/openid-credential-issuer` endpoint that will return the Issuer's Metadata:
+5. Configure the `/.well-known/openid-credential-issuer` endpoint that will return your Issuer Metadata:
 
 <Shnip
   snippets={[
@@ -261,7 +261,7 @@ Wallets use the `credential_issuer` from the Credential Offer to dynamically con
 - `credential_endpoint`: The endpoint the Wallet will use to submit requests to issue credentials. After obtaining an access token, the Wallet sends a credential request to this endpoint.
 - `credential_configurations_supported`: Defines the format `jwt_vc_json`, and the credential, including informative display markup.
 
-6. Configure the `/.well-known/oauth-authorization-server` endpoint that will return the Issuer's Authorization Server Metadata:
+6. Configure the `/.well-known/oauth-authorization-server` endpoint that will return your Issuer Authorization Server Metadata:
 
 <Shnip
   snippets={[
@@ -279,7 +279,7 @@ Wallets use the `credential_issuer` from the Credential Offer to dynamically con
 />
 
 - `issuer`: The base URL of the Issuer's service.
-- `token_endpoint`: The endpoint where Wallet's can exchange the `pre_authorization_code` receieved in the `credential_offer` for an access token.
+- `token_endpoint`: The endpoint where the Wallet can exchange the `pre_authorization_code` receieved in the `credential_offer` for an access token.
 
 7. Set up the `/token` endpoint to process incoming requests from the Wallet containing the `pre_authorization_code`. This code, originally provided in the `credential_offer` object, is used to validate the Wallet's request:
 
