--- a/site/docs/tbdex/issuer/kcc-wallet.mdx
+++ b/site/docs/tbdex/issuer/kcc-wallet.mdx
@@ -54,7 +54,7 @@ The IDV flow begins when your app, as the customer's agent, sends an HTTP reques
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialResolveIssuerDidKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -71,7 +71,7 @@ The IDV flow begins when your app, as the customer's agent, sends an HTTP reques
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialSendRequestToIdvServiceEndpointKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -169,7 +169,7 @@ To learn more refer to OpenID's specs on [Issued Identity Token](https://openid.
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialhandleSiopRequestWalletKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -221,7 +221,7 @@ The `credential_offer` object contains vital information about the Issuer:
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialHandleIssuerResponseWalletKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -244,7 +244,7 @@ To construct the URL to fetch the Issuer's metadata, the Wallet needs to append 
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialFetchIssuerMetadataWalletKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -324,7 +324,7 @@ Before the Wallet can request a KCC from the Issuer. In the same `handleIssuerRe
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialFetchAuthServerMetadataWalletKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -360,7 +360,7 @@ The Server Authorization Metadata can look like this:
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialFetchAccessTokenWalletKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
@@ -402,7 +402,7 @@ After receiving the `access_token` from the Issuer, the Wallet can now send a KC
       title: 'wallet.js',
     },
     {
-      snippetName: '',
+      snippetName: 'knownCustomerCredentialRequestCredentialWalletKT',
       language: 'Kotlin',
       title: 'Application.kt',
     },
