--- a/site/docs/tbdex/issuer/kcc-wallet.mdx
+++ b/site/docs/tbdex/issuer/kcc-wallet.mdx
@@ -8,43 +8,89 @@ hide_title: true
 
 # Requesting a Known Customer Credential
 
-Known Customer Credentials (KCCs) are [Verifiable Credentials](/docs/web5/learn/verifiable-credentials) designed to streamline the [Know Your Customer (KYC)](/) process for tbDEX protocol users. KCCs help in gaining access to PFIs providing regulated financial services.
+Known Customer Credentials (KCCs) are [Verifiable Credentials](/docs/web5/learn/verifiable-credentials) designed to streamline the [Know Your Customer (KYC)](/) process for tbDEX protocol users. KCCs help in gaining access to PFIs that provide regulated financial services.
 
-For a comprehensive exploration of the practical applications and compliance considerations of KCCs, refer to our [KCC Compliance Guide](/). It provides detailed examples and insights into how KCCs align with certain regulatory requirements. This offers valuable context for those overseeing the implementation and management of KCCs.
+For a comprehensive exploration of the practical applications and compliance considerations of KCCs, refer to the [KCC Compliance Guide](/). It provides detailed examples and insights into how KCCs align with certain regulatory requirements. This offers valuable context for those overseeing the implementation and management of KCCs.
 
 In this guide, we'll cover:
 
 - **Identity Verification (IDV)**: How your Wallet App initiates and supports the IDV process conformant with [Self Issued OpenID Provider V2 (SIOPv2)](https://openid.net/specs/openid-connect-self-issued-v2-1_0.html) and [OpenID for Verifiable Presentations (OID4VP)](https://openid.net/specs/openid-4-verifiable-presentations-1_0.html), ensuring users can securely verify their identity.
-- **Credential Request**: The steps needed for your Wallet App to request a KCC **post** successful IDV, on a users behalf.
-- **Credential Management**: How the Wallet utilizes existing credentials for KCC requests and secure storage of the KCC itself.
+- **Credential Request**: The steps needed for your Wallet App to request a KCC on a user's behalf after successful IDV.
+- **Credential Management**: How the Wallet utilizes existing credentials for KCC requests and securely stores the KCC itself.
 
 :::info
-For a detailed guide on Known Customer Credentials for **Issuers**, please refer to our [Issuer's Known Customer Credential Guide](/)
+For a detailed guide on Known Customer Credentials for **Issuers**, please refer to the [Issuer's Known Customer Credential Guide](/)
 :::
 
 ## Environment Setup
 
 ### Install Dependencies
 
-Your Wallet will require libraries for [handling HTTP request](https://www.npmjs.com/package/node-fetch), [managing credentials](https://www.npmjs.com/package/@web5/credentials) and [processing JSON Web Tokens(JWTs)](https://www.npmjs.com/package/@web5/credentials), which you can include in your project by installing the following dependencies:
+Your Wallet App will require libraries for handling HTTP requests and processing [JSON Web Tokens(JWTs)](https://jwt.io/). You can include these libraries in your project by installing the following dependencies:
 
-```bash
-npm install @web5/credentials @web5/dids node-fetch
-```
+<Shnip
+  snippets={[
+    {
+      snippetName: 'knownCustomerCredentialJsPackage',
+      language: 'JavaScript',
+      codeLanguage: 'bash',
+    },
+    {
+      language: 'Kotlin',
+      nestedSnippets: {
+        Gradle: {
+          snippetName: 'knownCustomerCredentialGradlePackage',
+          language: 'gradle',
+        },
+        Maven: {
+          snippetName: 'knownCustomerCredentialMavenPackage',
+          language: 'xml',
+        },
+      },
+    },
+  ]}
+/>
 
 ### Framework Flexibility
 
-The core logic provided in the code snippets of this guide is designed to be adaptable across different development environments. The code examples primarily cater to a Node.js environment however, the concepts shown can be applied within various frameworks or platforms, including web applications, server-side applications, and mobile applications. Depending on your development context, you'll need to adjust aspects like HTTP request handling, and secure storage to align with the practices and libraries of your chosen framework or platform.
+<LanguageSwitchBlock>
+  <div language="Kotlin">
+    <p>
+      The core logic provided in the code snippets of this guide is designed to
+      be adaptable across different development environments. The code examples
+      primarily cater to a **Ktor environment** however, the concepts shown can
+      be applied within various frameworks or platforms, including web
+      applications, server-side applications, and mobile applications. Depending
+      on your development context, you'll need to adjust aspects like HTTP
+      request handling and secure storage to align with the practices and
+      libraries of your chosen framework or platform.
+    </p>
+  </div>
+  <div language="JavaScript">
+    <p>
+      The core logic provided in the code snippets of this guide is designed to
+      be adaptable across different development environments. The code examples
+      primarily cater to a **Node.js environment** however, the concepts shown
+      can be applied within various frameworks or platforms, including web
+      applications, server-side applications, and mobile applications. Depending
+      on your development context, you'll need to adjust aspects like HTTP
+      request handling, and secure storage to align with the practices and
+      libraries of your chosen framework or platform.
+    </p>
+  </div>
+</LanguageSwitchBlock>
 
 ## IDV Process
 
-IDV is a critical component of typical KYC requirements, where certain types of Personally Identifiable Information (PII) are collected and verified from an individual. IDV is a crucial step before a KCC can be issued.
+Identity Verification is a critical component of typical KYC requirements, where certain types of Personally Identifiable Information (PII) are collected and verified from an individual. IDV is a crucial step before a KCC can be issued.
 
 [**Wallet's IDV Flow diagram**]
 
 The IDV flow begins when your app, as the customer's agent, sends an HTTP request to the Issuer's IDV service endpoint specified in the Issuer's [Decentralized Identifier (DID)](/docs/web5/learn/decentralized-identifiers) Document.
 
-1. Resolve the Issuer's DID to get the IDV service Endpoint that can be found in the Issuer's [DID Document](/docs/web5/learn/decentralized-identifiers#did-documents):
+### 1. Get IDV Endpoint
+
+Resolve the Issuer's DID to get the IDV service Endpoint that can be found in the Issuer's [DID Document](/docs/web5/learn/decentralized-identifiers#did-documents):
 
 <Shnip
   snippets={[
@@ -61,7 +107,9 @@ The IDV flow begins when your app, as the customer's agent, sends an HTTP reques
   ]}
 />
 
-2. Send an HTTP request to the IDV Service Endpoint:
+### 2. Send HTTP request to Service Endpoint
+
+Send an HTTP request to the IDV Service Endpoint:
 
 <Shnip
   snippets={[
@@ -78,11 +126,11 @@ The IDV flow begins when your app, as the customer's agent, sends an HTTP reques
   ]}
 />
 
-The Issuer will then respond with a URI encoded [SIOPv2 Authorization Request](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html#section-9).
+The Issuer will then respond with a URI-encoded [SIOPv2 Authorization Request](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html#section-9).
 This request contains information about the Issuer along with a [Presentation Definition](https://developer.tbd.website/docs/web5/build/verifiable-credentials/presentation-definition). Some of the key information included is:
 
 - **`client_id`**: Issuer's DID, establishing the Issuer/requestor's identity.
-- **`response_type`**: Lets the Wallet know the desired format, with `id_token` being required identity token and `vp_token` for _optional_ verifiable presentation token. The inclusion of `vp_token` means a presentation definition is required within the request.
+- **`response_type`**: Indicates the desired format (e.g., `id_token`, `vp_token`) where `id_token` is required and `vp_token` is optional. If the desired format specifies `vp_token`, a verifiable presentation token should be provided to satisfy the presentation definition contained within the request.
 - **`response_uri`**: Indicates the callback url for the Wallet, ensuring direct communication between the Wallet and the Issuer.
 - **`nonce`**: A unique identifier tying together the request and its response.
 
@@ -153,13 +201,17 @@ siopRequest = {
 
 :::info
 
-- `id_token` is a Self Issued Identity Token, that authenticates the customer to the Issuer by sharing the customer's Decentralized Identifier.
-- `vp_token` is a Verifiable Presentation that contains certified and authenticated claims about the customer. In this guide, we'll cover an example `vp_token` and `id_token`.
+- `id_token` is a self-issued Identity Token that authenticates the customer to the Issuer by sharing the customer's Decentralized Identifier.
+- `vp_token` is a Verifiable Presentation that contains certified and authenticated claims about the customer.
+
+In this guide, we'll cover an example `vp_token` and `id_token`.
 
 To learn more refer to OpenID's specs on [Issued Identity Token](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html#name-self-issued-id-token) and [Verifiable Presentation Token](https://openid.net/specs/openid-4-verifiable-presentations-1_0.html#section-6.1-2.2).
 :::
 
-3. Decode the Issuer's SIOPv2 Authorization Request and create a [SIOPv2 Authorization Response](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html#section-10) with `id_token` and `vp_token`:
+### 3. Create SIOPv2 Authorization Response
+
+Decode the Issuer's SIOPv2 Authorization Request and create a [SIOPv2 Authorization Response](https://openid.github.io/SIOPv2/openid-connect-self-issued-v2-wg-draft.html#section-10) with `id_token` and `vp_token`:
 
 <Shnip
   snippets={[
@@ -180,7 +232,7 @@ To learn more refer to OpenID's specs on [Issued Identity Token](https://openid.
 If the User's Verifiable Credentials do not satisfy the Authorization Request's Presentation Definition then only the `id_token` will be sent to the Issuer's `response_uri`. If the credentials **do** satisfy then a [Verifiable Presentation](https://developer.tbd.website/docs/glossary/#verifiable-presentation) (`vp_token`) will also be sent.  
 :::
 
-If `vp_token` wasn't in the SIOPv2 Response, then the Issuer will respond with a `credential_offer` and a `url` that points to a webpage for the customer to input their PII (e.g.; name, identification number, date of birth, etc). After successful completion of this form, the Wallet can proceed with the next steps, [processing the Credential Offer](https://hackmd.io/SQwE3SnrRkmeipGGtznJTw?both#Processing-the-Credential-Offer).
+If `vp_token` wasn't in the SIOPv2 Response, the Issuer will respond with a `credential_offer` and a `url` that points to a webpage for the customer to provide their information. After successful completion of this form, the Wallet can proceed with the next steps, [processing the Credential Offer](#processing-the-credential-offer).
 
 [**GIF of PII info being filled out?**]
 
@@ -205,13 +257,15 @@ After successful completion of the Identity Verification - whether via form or t
 
 The `credential_offer` object contains vital information about the Issuer:
 
-- **`credential_issuer`**: The base URL address of the Issuer's service. It is used by the Wallet to retrieve the Issuer's metadata and the Issuer's Authorization Server Metadata.
+- **`credential_issuer`**: The base URL address of the Issuer's service. It is used by the Wallet to retrieve the Issuer's Metadata and the Issuer's Authorization Server Metadata.
 - **`credential_configuration_ids`**: Unique strings that identify the credential you are offering. The Wallet can use these to request metadata.
 - **`grants`**: Contains grant types the Issuer will accept for this credential offer.
 - **`urn:ietf:params:oauth:grant-type:pre-authorized_code`**: Grant type required for the [OpenID for Verifiable Credential Issuance (OID4VCI)](https://openid.net/specs/openid-4-verifiable-credential-issuance-1_0.html#appendix-B.1) Pre-Authorization flow.
 - **`pre-authorized_code`**: The code representing the Credential Issuer's authorization for the Wallet to obtain an access token.
 
-1. Extract and store the `credential_issuer` URL and `pre_authorized_code` from the credential offer:
+### 1. Extract Credential Offer
+
+Extract and store the `credential_issuer` URL and `pre_authorized_code` from the credential offer:
 
 <Shnip
   snippets={[
@@ -232,9 +286,11 @@ The `credential_offer` object contains vital information about the Issuer:
 The `credential_issuer` URL is crucial for the next steps, as it will be used to construct the URLs for fetching the Issuer's Metadata and the Issuer's Authorization Server Metadata.
 :::
 
-2. Fetch the Issuer's Metadata from the `credential_issuers` URL
+### 2. Get Issuer's Metadata
 
-To construct the URL to fetch the Issuer's metadata, the Wallet needs to append `/.well-known/openid-credential-issuer` to the `credential_issuer` URL provided in the `credential_offer`:
+Fetch the Issuer's Metadata from the `credential_issuers` URL
+
+To construct the URL to fetch the Issuer's Metadata, the Wallet needs to append `/.well-known/openid-credential-issuer` to the `credential_issuer` URL provided in the `credential_offer`:
 
 <Shnip
   snippets={[
@@ -253,7 +309,7 @@ To construct the URL to fetch the Issuer's metadata, the Wallet needs to append 
 
 The Issuer's Metadata includes information about the Issuer's capabilities, credential endpoint, supported credential configurations, and more. Some of the key information included is:
 
-- `credential_issuer`: The base URL address of the Issuer's service. It is used by the Wallet to retrieve the Issuer's metadata and the Issuer's Authorization Server Metadata.
+- `credential_issuer`: The base URL address of the Issuer's service. It is used by the Wallet to retrieve the Issuer's Metadata and the Issuer's Authorization Server Metadata.
 - `credential_endpoint`: The endpoint the Wallet will use to submit requests to issue credentials. After obtaining an access token, the Wallet sends a credential request to this endpoint.
 - `credential_configurations_supported`: Defines the format `jwt_vc_json`, and the credential, including informative display markup.
 
@@ -312,9 +368,11 @@ Here is an example of an Issuer's Metadata:
 
 </details>
 
-3. Fetch the Authorization Server's Metadata
+### 3. Get Authorization Server's Metadata
 
-Before the Wallet can request a KCC from the Issuer. In the same `handleIssuerResponse()` the Wallet needs to also fetch the Issuer's Authorization Server Metadata. Similarly, by appending `/.well-known/oauth-authorization-server` to the `credential_issuer` URL:
+Fetch the Authorization Server's Metadata
+
+Before the Wallet can request a KCC from the Issuer, the Wallet needs to also fetch the Issuer's Authorization Server Metadata by appending `/.well-known/oauth-authorization-server` to the `credential_issuer` URL in `handleIssuerResponse()`:
 
 <Shnip
   snippets={[
@@ -350,7 +408,9 @@ The Server Authorization Metadata can look like this:
 - `issuer`: The base URL of the Issuer's service.
 - `token_endpoint`: The endpoint where the Wallet can exchange the `pre_authorization_code` receieved in the `credential_offer` for an access token.
 
-4. Fetch the Access Token from the Issuer's `/token` endpoint:
+### 4. Get Access Token
+
+Fetch the Access Token from the Issuer's `/token` endpoint:
 
 <Shnip
   snippets={[
@@ -392,7 +452,9 @@ Here's an example Access Token Response from the Issuer:
 
 After receiving the `access_token` from the Issuer, the Wallet can now send a KCC request to the `credential_endpoint` that was in the Issuer's Metadata.
 
-1. Sign and Send an HTTP POST request to the Issuer's credential endpoint:
+### Send Request to Issuer's Credential Endpoint
+
+Sign and Send an HTTP POST request to the Issuer's credential endpoint:
 
 <Shnip
   snippets={[
@@ -415,6 +477,8 @@ To learn more about the **fields** within the `payload` and `header`, please ref
 The Known Customer Credential will be a signed VC [JSON Web Token](https://jwt.io/) for secure transmission.
 :::
 
+## Example Known Customer Credential
+
 To convert the signed VC JWT into a `VerifiableCredential` object you can use the [`parseJwt()` method](/docs/web5/build/verifiable-credentials/jwt-to-vc#decoding-jwt). Here is what a decoded **Known Customer Credential** would look like:
 
 ```javascript
@@ -434,7 +498,7 @@ To convert the signed VC JWT into a `VerifiableCredential` object you can use th
 }
 ````
 
-To the user an example KCC may look like this:
+To the user, an example KCC may look like this:
 
 [**KCC IMAGE**]
 
