--- a/site/docs/tbdex/wallet/required-sdks.mdx
+++ b/site/docs/tbdex/wallet/required-sdks.mdx
@@ -57,3 +57,43 @@ To send and receive tbDEX messages, import the following classes:
     { snippetName: 'walletSdkImportsKt', language: 'Kotlin'},
   ]}
   />
+
+<details>
+<summary>Android Setup</summary>
+
+In order to have a smooth Android development experience, we've found the following to be helpful. Firstly, be sure to exclude `META-INF/DEPENDENCIES` as follows in your `build.gradle.kts` file:
+
+```kotlin
+android {
+    packagingOptions {
+        exclude("META-INF/DEPENDENCIES")
+    }
+}
+```
+
+Additionally, you'll want to modify your `dependencies` object to look like the following:
+
+```kotlin
+
+dependencies {
+  
+  implementation("xyz.block:tbdex-httpclient:0.11.0-beta") {
+      exclude(group = "com.google.protobuf", module = "protobuf-java")
+      exclude(group = "org.bouncycastle", module = "bcprov-jdk18on")
+      exclude(group = "com.github.stephenc.jcip", module = "jcip-annotations")
+      exclude(group = "com.google.crypto.tink", module="tink")
+  }
+
+  implementation("xyz.block:tbdex-protocol:0.11.0-beta") {
+      exclude(group = "com.google.protobuf", module = "protobuf-java")
+      exclude(group = "org.bouncycastle", module = "bcprov-jdk18on")
+      exclude(group = "com.github.stephenc.jcip", module = "jcip-annotations")
+      exclude(group = "com.google.crypto.tink", module="tink")
+  
+  }
+
+}
+```
+
+Specifically, note the exclusion of a number of dependencies so that your app uses the versions of these libraries that are shipped with Android.
+</details>
