Updating tbdex.js

--- a/site/docs/tbdex/wallet/send-rfq.mdx
+++ b/site/docs/tbdex/wallet/send-rfq.mdx
@@ -26,7 +26,7 @@ To create the message, construct an RFQ passing metadata and data:
 />
 
 ### metadata
-The metadata properties identify the DIDs of the sender (your customer) and the recipient (the PFI):
+The metadata properties identify the DIDs of the sender (your customer), the recipient (the PFI), and the version of the tbDEX protocol you're using:
 
 <Shnip
   snippets={[
