--- a/site/docs/tbdex/message-types.mdx
+++ b/site/docs/tbdex/message-types.mdx
@@ -14,7 +14,7 @@ PFIs and Wallets are able to communicate with each other by using the following 
 
 * [**Quote**](/docs/tbdex/pfi/creating-quotes) - A quote sent by the PFI in response to an RFQ, including a locked-in price that the PFI is willing to honor until a built-in expiration date
 
-* [**Order**](/docs/tbdex/pfi/processing-orders) - a message sent by a wallet to a PFI to accept a quote
+* [**Order**](/docs/tbdex/pfi/processing-orders) - A message sent by a wallet to a PFI to accept a quote
 
 * [**OrderStatus**](/docs/tbdex/pfi/processing-orders#provide-an-initial-orderstatus) - A message sent by the PFI to a wallet to convey the current status of an order.
 
