added missing links

--- a/site/docs/tbdex/issuer/kcc-wallet.mdx
+++ b/site/docs/tbdex/issuer/kcc-wallet.mdx
@@ -8,9 +8,9 @@ hide_title: true
 
 # Requesting a Known Customer Credential
 
-Known Customer Credentials (KCCs) are [Verifiable Credentials](/docs/web5/learn/verifiable-credentials) designed to streamline the [Know Your Customer (KYC)](/) process for tbDEX protocol users. KCCs help in gaining access to PFIs that provide regulated financial services.
+Known Customer Credentials (KCCs) are [Verifiable Credentials](/docs/web5/learn/verifiable-credentials) designed to streamline the [Know Your Customer (KYC)](https://www.tbdex.io/guides/compliance) process for tbDEX protocol users. KCCs help in gaining access to PFIs that provide regulated financial services.
 
-For a comprehensive exploration of the practical applications and compliance considerations of KCCs, refer to the [KCC Compliance Guide](/). It provides detailed examples and insights into how KCCs align with certain regulatory requirements. This offers valuable context for those overseeing the implementation and management of KCCs.
+For a comprehensive exploration of the practical applications and compliance considerations of KCCs, refer to the [KCC Compliance Guide](https://www.tbdex.io/guides/kcc). It provides detailed examples and insights into how KCCs align with certain regulatory requirements. This offers valuable context for those overseeing the implementation and management of KCCs.
 
 In this guide, we'll cover:
 
@@ -19,7 +19,7 @@ In this guide, we'll cover:
 - **Credential Management**: How the Wallet utilizes existing credentials for KCC requests and securely stores the KCC itself.
 
 :::info
-For a detailed guide on Known Customer Credentials for **Issuers**, please refer to the [Issuer's Known Customer Credential Guide](/)
+For a detailed guide on Known Customer Credentials for **Issuers**, please refer to the [Issuer's Known Customer Credential Guide](/docs/tbdex/issuer/kcc/kcc-issuer)
 :::
 
 ## Environment Setup
