Add Narissa Flores to Governance Committee

--- a/site/src/content/open-source/governance/content.mdx
+++ b/site/src/content/open-source/governance/content.mdx
@@ -55,6 +55,7 @@
   <p>
     <ul>
       <li>Ben Boeser, Technical Partnerships Lead, TBD</li>
+      <li>Narissa Flores, Foundational Engineering Security, Block</li>
       <li>Angie Jones, Head of Developer Relations, TBD</li>
       <li>Julie Kim, Head of Legal, TBD</li>
       <li>Nidhi Nahar, Head of Patents and Open Source, Block</li>
