--- a/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
+++ b/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
@@ -78,7 +78,7 @@ In a tbDEX ecosystem, verifiable credentials serve as a method for establishing 
 * Verify credentials
 
 :::tip KYC Credential
-We have designed a [Known Customer Credential](https://www.tbdex.io/guides/kcc) to satisfy Know Your Customer regulatory requirements.
+We have developed a [Known Customer Credential](https://www.tbdex.io/guides/kcc) specifically designed to represent a PFI's Know Your Customer regulatory requirements.
 :::
 
 ## 🛠️ Get Started with tbDEX
