--- a/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
+++ b/site/blog/2024-04-07-launch-of-tbdex-v1.mdx
@@ -57,9 +57,9 @@ Wallet applications using tbDEX act as agents for customers who are seeking liqu
 
 * Obtain service offerings from PFIs to determine which meet your customers' needs
 
-* Initiate exchanges with a PFIs
+* Initiate exchanges with PFIs
 
-* Provide PFIs with verifiable credentials on behalf on your customers
+* Present verifiable credentials to PFIs on behalf on your customers
 
 * Receive real-time quotes and place orders
 
